@@ -1,3 +1,8 @@
+2003-03-16  Andras Timar  <timar@gnome.hu>
+
+	* help-converters/docbook/gnome-customization/l10n.xml:
+        Added Hungarian translation.
+
 2003-02-13  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Require intltool version that supports
